Kubernetes/apps/sonarr/service-tailscale.yaml
apiVersion: v1
kind: Service
metadata:
  name: sonarr
  namespace: media
  annotations:
    tailscale.com/expose: "true"
    tailscale.com/hostname: "sonarr"
spec:
  type: ClusterIP
  ports:
    - name: http
      port: 8989
      targetPort: http
  selector:
    app: sonarr
