Kubernetes/apps/sonarr/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: sonarr
  namespace: media
spec:
  ports:
    - name: http
      port: 8989
      targetPort: http
  selector:
    app: sonarr
