Kubernetes/apps/sonarr/ingress.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: sonarr
  namespace: media
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`sonarr.nerine.dev`)
      services:
        - name: sonarr
          port: 8989
      middlewares:
        - name: public-chain
          namespace: traefik
        - name: authentik
          namespace: traefik
  tls:
    certResolver: letsencrypt
    domains:
      - main: nerine.dev
        sans:
          - "*.nerine.dev"
